min width on btnlg to prevent narrow btn on mobile

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -342,5 +342,10 @@ a {
   }
 }
 
+.btn-lg {
+  @media (min-width:0px) and (max-width:750px) {
+    min-width: 35%;
+  }
+}
 // End of Contact section
 
